[tool.poetry]
name = "ARCtrl"
version = "2.2.3"
description = "Library for management of Annotated Research Contexts (ARCs) using an in-memory representation and runtimer agnostic contract systems."
authors = ["Heinrich Lukas Weil <weil@rptu.de>", "Kevin Frey <freymaurer@gmx.de>"]
maintainers = ["Florian Wetzels"]
readme = "README.md"
repository = "https://github.com/nfdi4plants/ARCtrl"
keywords = ["arc", "annotated research context", "isa", "research data", "multi platform"]

[tool.poetry.dependencies]
python = "^3.10"
requests = ">= 2.28.1, <3.0.0"
aiofiles = "^24.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"