[project]
name = "arctrl"
version = "3.0.0b1"
description = "Library for management of Annotated Research Contexts (ARCs) using an in-memory representation and runtimer agnostic contract systems."
authors = [
    { name = "Heinrich Lukas Weil", email = "weil@rptu.de" },
    { name = "Kevin Frey", email = "freymaurer@gmx.de" },
]
requires-python = ">=3.11"
readme = "README.md"
maintainers = [{ name = "Florian Wetzels" }]
keywords = [
    "arc",
    "annotated research context",
    "isa",
    "research data",
    "multi platform",
]
dependencies = [
    "requests>= 2.28.1, <3.0.0",
    "openpyxl>=3.1.5,<4",
]

[project.urls]
Repository = "https://github.com/nfdi4plants/ARCtrl"

[dependency-groups]
dev = [
    "pytest>=8.1.1,<9",
    "twine>=4.0.2"
]

[tool.poetry]
include = [
    "src/ARCtrl/py/**/*.py"
]
packages = [
    { include = "**/*.py", from = "src/ARCtrl/", to = "arctrl" }
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
